# ncnn-android-yolox

./: local.properties
app/src/main/jni/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
